--- a/ratapan_com/src/assets/scss/main.scss
+++ b/ratapan_com/src/assets/scss/main.scss
@@ -1,18 +1,14 @@
 //importacion abstracts
 @import "abstracts/variables", "abstracts/mixins";
 
-//importacion vendors
-
-
-
 //importacion layout
 @import "layout/sidebar";
 
 //importacion components
-@import "components/buttons", "components/spinner", "components/check";
+@import "components/buttons", "components/spinner", "components/check", "components/box", "components/texts";
 
 //importacion pages beneficios
-@import "pages/home";
+@import "pages/home","pages/app";
 
 //importacion themes
 @import "themes/light", "themes/darck";
