--- a/ratapan_com/src/assets/scss/abstracts/_mixins.scss
+++ b/ratapan_com/src/assets/scss/abstracts/_mixins.scss
@@ -36,3 +36,33 @@
   z-index: 999;
   backdrop-filter: blur(6px);
 }
+@mixin colors_transition {
+  transition: background-color 0.3s;
+  -webkit-transition: background-color 0.3s;
+  -moz-transition: background-color 0.3s;
+  -ms-transition: background-color 0.3s;
+  -o-transition: background-color 0.3s;
+  transition: color 0.3s;
+  -webkit-transition: color 0.3s;
+  -moz-transition: color 0.3s;
+  -ms-transition: color 0.3s;
+  -o-transition: color 0.3s;
+}
+@mixin btn_primary {
+  overflow: hidden;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  padding: 4px 0 4px 10px;
+  &:hover{
+    color: var(--c-back_2);
+    background-color: var(--c-link);
+  }
+  }
+  @mixin fl_center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
