--- a/ratapan_com/src/assets/scss/abstracts/_variables.scss
+++ b/ratapan_com/src/assets/scss/abstracts/_variables.scss
@@ -1,12 +1,12 @@
 :root {
    --c-black: #424B54;
    --c-back: #F7F4EA;
-   --c-back_2:#f5f2ed;
-   --c-select: #d9d2ff;
+   --c-back_2:#f3e7d5;
+   --c-select: #433497;
+   --c-link: #42b983;
 }
-
 //@media
-$max-movil: 425px;
+$max-movil: 500px;
 $max-tablet: 768px;
 $min-laptop: 1024px;
 $min-desktop: 1440px;
